@@ -4,6 +4,7 @@ New features:
 ..F....... [ZBXNEXT-4081] improved error message for case when none of supported database modules exists (gcalenko)
 
 Bug fixes:
+..F....... [ZBX-12722] fixed scrollbar causing a JS error in "500 latest values" page due to unnecessarily initialization (Ivo)
 ..F....... [ZBX-12710] fixed OS type detection logic (vjaceslavs)
 ..F....... [ZBX-12543] fixed problems with session management (vjaceslavs)
 ........S. [ZBX-12259] added an informative warning about lack of data for macros used in LLD rule filter (viktors)
@@ -535,6 +536,7 @@ New features:
 ..F....... [ZBXNEXT-4081] improved error message for case when none of supported database modules exists (gcalenko)
 
 Bug fixes:
+..F....... [ZBX-12722] fixed scrollbar causing a JS error in "500 latest values" page due to unnecessarily initialization (Ivo)
 ..F....... [ZBX-12710] fixed OS type detection logic (vjaceslavs)
 ..F....... [ZBX-12543] fixed problems with session management (vjaceslavs)
 ..F....... [ZBX-12655] fixed action message visibility in event details when users belongs to different groups (gcalenko)
